--- a/index.html
+++ b/index.html
@@ -501,11 +501,9 @@
                             <svg class="faq__arrows-icon--mob">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
                             </svg>
-
                             <svg class="faq__arrows-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
                             </svg>
-
                             <p class="faq__arrows-text">зателефонувати до нас або написати нам на e-mail</p>
                         </li>
 
@@ -513,11 +511,9 @@
                             <svg class="faq__arrows-icon--mob">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow2"></use>
                             </svg>
-
                             <svg class="faq__arrows-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-arrow2"></use>
                             </svg>
-
                             <p class="faq__arrows-text">прислати фото на Viber, у Telegram, або ж Instagram</p>
                         </li>
 
@@ -525,11 +521,9 @@
                              <svg class="faq__arrows-icon--mob">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
                             </svg>
-
                             <svg class="faq__arrows-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
                             </svg>
-
                             <p class="faq__arrows-text">замовити композицію на певний день та час</p>
                         </li>
 
@@ -537,11 +531,9 @@
                              <svg class="faq__arrows-icon--mob">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow2"></use>
                             </svg>
-
                             <svg class="faq__arrows-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-arrow2"></use>
                             </svg>
-
                             <p class="faq__arrows-text faq__arrows-text--4">оплатити кульки онлайн</p>
                         </li>
 
@@ -549,11 +541,9 @@
                              <svg class="faq__arrows-icon--mob">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-wide-arrow1"></use>
                             </svg>
-
                             <svg class="faq__arrows-icon">
                                 <use href="/images/index/svg/symbol-defs.svg#icon-arrow1"></use>
                             </svg>
-
                             <p class="faq__arrows-text">приїхати за вже надутими кульками у визначений час</p>
                         </li>
                     </ul>
@@ -562,8 +552,69 @@
                         <svg class="faq__arrows-block faq__arrows-block--finish">
                             <use href="/images/index/svg/symbol-defs.svg#icon-finish"></use>
                         </svg>
-
                     </div>
+                </div>
+
+                <div class="faq__questions">
+                    <ul class="faq__questions-list link">
+                        <li class="faq__questions-item">
+                            <div class="faq__text-group">
+                                <p>Тут надані відповіді на найбільш поширені Ваші запитання:</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <div class="faq__text-group">
+                                <p>Як довго літають ваші гелієві кульки?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                        <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <div class="faq__text-group">
+                                <p>Чи здійснюєте ви доставку по місту?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+
+                        <li class="faq__questions-item">
+                            <p></p>
+                        </li>
+                    </ul>
 
                 </div>
             </div>
