Question section table

--- a/index.html
+++ b/index.html
@@ -558,23 +558,17 @@
                 <div class="faq__questions">
                     <ul class="faq__questions-list link">
                         <li class="faq__questions-item">
-                            <div class="faq__text-group">
                                 <p>Тут надані відповіді на найбільш поширені Ваші запитання:</p>
-                                <svg class="faq__questions-text--icon">
-                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
-                                </svg>
-                            </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
-                        <li class="faq__questions-item">
+                        <li class="faq__questions-item" id="toggleButton">
                             <div class="faq__text-group">
                                 <p>Як довго літають ваші гелієві кульки?</p>
                                 <svg class="faq__questions-text--icon">
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                        <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                        <p class="faq__text--hidden" id="hiddenField">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -588,32 +582,74 @@
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Чи можу я надути у вас свої кульки, придбані в іншому магазині/в інтернеті?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Можу я відправити вам фото з інтернету, а ви мені зробите подібну композицію?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Можна зробити замовлення наперід та забрати його в певний день та час?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Де я можу побачити фото готових сетів (композицій) з кульок?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Яка вартість коробки-сюрприза з кульками?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
-                            <p></p>
+                            <div class="faq__text-group">
+                                <p>Де можна побачити прайс з орієнтовними цінами?</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
-
+<!-- 
                         <li class="faq__questions-item">
-                            <p></p>
-                        </li>
+                            <div class="faq__text-group">
+                                <p>Дивитись всі запитання</p>
+                                <svg class="faq__questions-text--icon">
+                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
+                                </svg>
+                            </div>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                        </li> -->
                     </ul>
 
                 </div>
@@ -635,6 +671,7 @@
     
     <script src="/js/carousel.js"></script>
     <script src="/js/call.js"></script>
+    <script src="/js/click.js"></script>
     <script src="/js/slider.js"></script>
 </body>
 </html>
