FAQ section for mac

--- a/index.html
+++ b/index.html
@@ -561,14 +561,14 @@
                                 <p>Тут надані відповіді на найбільш поширені Ваші запитання:</p>
                         </li>
 
-                        <li class="faq__questions-item" id="toggleButton">
+                        <li class="faq__questions-item">
                             <div class="faq__text-group">
                                 <p>Як довго літають ваші гелієві кульки?</p>
                                 <svg class="faq__questions-text--icon">
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                        <p class="faq__text--hidden" id="hiddenField">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час. Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час. Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -640,7 +640,8 @@
                             </div>
                             <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
                         </li>
-<!-- 
+
+                        <!-- 
                         <li class="faq__questions-item">
                             <div class="faq__text-group">
                                 <p>Дивитись всі запитання</p>
@@ -664,6 +665,7 @@
                 <div class="caption">
                     <h2 class="caption_text">ffjhjf</h2>                    
                 </div>
+
             </div>
         </section>
 
