FAQ section complete

--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час. Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час. Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -578,7 +578,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -588,7 +588,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -598,7 +598,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -618,7 +618,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -628,7 +628,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <li class="faq__questions-item">
@@ -638,7 +638,7 @@
                                     <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
                                 </svg>
                             </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
+                            <p class="faq__text--hidden"></p>
                         </li>
 
                         <!-- 
