--- a/index.html
+++ b/index.html
@@ -640,22 +640,65 @@
                             </div>
                             <p class="faq__text--hidden"></p>
                         </li>
-
-                        <!-- 
-                        <li class="faq__questions-item">
-                            <div class="faq__text-group">
-                                <p>Дивитись всі запитання</p>
-                                <svg class="faq__questions-text--icon">
-                                    <use href="/images/index/svg/symbol-defs.svg#icon-bird-arrow"></use>
-                                </svg>
-                            </div>
-                            <p class="faq__text--hidden">Так, звичайно. Ви можете замовити доставку кульок на свою адресу на певний день та час.</p>
-                        </li> -->
                     </ul>
-
                 </div>
             </div>
         </section>
+
+        <!-- CONTACTS SECTION -->
+        <section class="contacts__section container">
+            <div class="contacts section-wide">
+                <div class="contacts_caption caption">
+                    <h2 class="caption_text">Контакти</h2>                    
+                </div>
+
+                <ul class="contacts__list link">
+                    <li class="contacts__item">
+                        <iframe class="contacts__link" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40385.27873015646!2d25.299137589677663!3d50.755551742643654!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259945ae4a880d%3A0x3ea2f447ac4eb5d1!2z0JPQtdC70ZbRlNCy0ZYg0LrRg9C70YzQutC4INCb0YPRhtGM0Lo!5e0!3m2!1sru!2sua!4v1694780242139!5m2!1sru!2sua"
+                        allowfullscreen
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                        <p class="contacts__text contacts__adress">
+                            <span class="contacts__text--caption">проспект Волі, 4</span><br>
+                            вхід в магазин “Солодощі”<br>
+                            біля аптеки “Волиньфарм”
+                        </p>
+                        <p class="contacts__text contacts__working">
+                            <span class="contacts__text--caption">Режим роботи:</span><br>
+                            Пн - Пт 10:00 - 19:00<br>
+                            Сб - Нд 12:00 - 17:00<br>
+                            без вихідних
+                        </p>
+                    </li>
+
+                    <li class="contacts__item">
+                        <iframe class="contacts__link"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d40385.1975467537!2d25.299137564330017!3d50.75564582775242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472599748381148f%3A0xf7807002776ee72a!2z0JzQsNCz0LDQt9C40L0g0LPQtdC70ZbRlNCy0LjRhSDQutGD0LvRjNC-0Log0YLQsCDRgtC-0LLQsNGA0ZbQsiDQtNC70Y8g0YHQstGP0YLQsCLQmtCw0YDQvdCw0LLQsNC7Ig!5e0!3m2!1sru!2sua!4v1694783998417!5m2!1sru!2sua"
+                        allowfullscreen
+                        loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                        <p class="contacts__text contacts__adress--reverse">
+                            <span class="contacts__text--caption">вул. Лесі Українки, 67</span><br>
+                            вхід в магазин “Єва”<br>
+                            та кафе “Театральне”
+                        </p>
+                        <p class="contacts__text contacts__working--reverse">
+                            <span class="contacts__text--caption">Режим роботи:</span><br>
+                            Пн - Пт 10:00 - 18:00<br>
+                            Сб 12:00 - 17:00<br>
+                            Нд - вихідний
+                        </p>
+                    </li>
+                </ul>
+                
+
+            </div>
+        </section>
+
+
 
 
 
