Contacts section complied

--- a/index.html
+++ b/index.html
@@ -660,17 +660,25 @@
                         loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
-                        <p class="contacts__text contacts__adress">
-                            <span class="contacts__text--caption">проспект Волі, 4</span><br>
-                            вхід в магазин “Солодощі”<br>
-                            біля аптеки “Волиньфарм”
-                        </p>
-                        <p class="contacts__text contacts__working">
-                            <span class="contacts__text--caption">Режим роботи:</span><br>
-                            Пн - Пт 10:00 - 19:00<br>
-                            Сб - Нд 12:00 - 17:00<br>
-                            без вихідних
-                        </p>
+
+                        <ul class="contacts__text link">
+                            <li class="contacts__area contacts__area-adress">
+                                <p class="contacts__adress">
+                                    <span class="contacts__text--caption">проспект Волі, 4</span><br>
+                                    вхід в магазин “Солодощі”<br>
+                                    біля аптеки “Волиньфарм”
+                                </p>
+                            </li>
+
+                            <li class="contacts__area contacts__area-schedule">
+                                <p class="contacts__working">
+                                    <span class="contacts__text--caption">Режим роботи:</span><br>
+                                    Пн - Пт 10:00 - 19:00<br>
+                                    Сб - Нд 12:00 - 17:00<br>
+                                    без вихідних
+                                </p>
+                            </li>                       
+                        </ul>
                     </li>
 
                     <li class="contacts__item">
@@ -680,20 +688,33 @@
                         loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade">
                         </iframe>
-                        <p class="contacts__text contacts__adress--reverse">
-                            <span class="contacts__text--caption">вул. Лесі Українки, 67</span><br>
-                            вхід в магазин “Єва”<br>
-                            та кафе “Театральне”
-                        </p>
-                        <p class="contacts__text contacts__working--reverse">
-                            <span class="contacts__text--caption">Режим роботи:</span><br>
-                            Пн - Пт 10:00 - 18:00<br>
-                            Сб 12:00 - 17:00<br>
-                            Нд - вихідний
-                        </p>
+
+                        <ul class="contacts__text contacts__text--reverse link">
+                            <li class="contacts__area contacts__area--reverse contacts__area-adress contacts__area-adress--reverse">
+                                <p class="contacts__adress">
+                                    <span class="contacts__text--caption">вул. Лесі Українки, 67</span><br>
+                                    вхід в магазин “Єва”<br>
+                                    та кафе “Театральне”
+                                </p>
+                            </li>
+
+                            <li class="contacts__area contacts__area--reverse contacts__area-schedule contacts__area-schedule--reverse">
+                                <p class="contacts__working--reverse">
+                                    <span class="contacts__text--caption">Режим роботи:</span><br>
+                                    Пн - Пт 10:00 - 18:00<br>
+                                    Сб 12:00 - 17:00<br>
+                                    Нд - вихідний
+                                </p>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
-                
+
+                <p class="contacts__call">
+                    <span class="contacts__call--caption">Доставка щастя</span><br>
+                    прямо у вашу<br>
+                    оселю!
+                </p>                
 
             </div>
         </section>
