--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
         </section>
 
         <!-- CONTACTS SECTION -->
-        <section class="contacts__section container">
+        <section class="contacts-section container">
             <div class="contacts section-wide">
                 <div class="contacts_caption caption">
                     <h2 class="caption_text">Контакти</h2>                    
@@ -719,19 +719,61 @@
             </div>
         </section>
 
+        <!-- FOOTER -->
+        <section class="footer-section container">
+            <div class="footer">
+                <button class="footer__button footer__button--1">
+                    <p class="footer__button--text">095 714 33 50</p>   
+                    <p class="footer__button--text footer__button--text2">Замовлення кульок, консультації</p>                 
+                </button>
+
+                <button class="footer__button footer__button--2">  
+                    <p class="footer__button--text">066 389 34 33</p>           
+                    <p class="footer__button--text footer__button--text2">Viber, Telegram</p>       
+                </button>
+
+                <button class="footer__button footer__button--3">   
+                    <p class="footer__button--text">kulki.lutsk@gmail.com</p>   
+                    <p class="footer__button--text footer__button--text2">E-mail</p>              
+                </button>
+            </div>
+
+            <ul class="footer__list link">
+                <li class="footer__list-item">
+                    <svg class="footer__list-icon">
+                        <use href="/images/index/svg/symbol-defs.svg#icon-instagram"></use>                        
+                    </svg>                    
+                </li>
+
+                <li class="footer__list-item">
+                    <svg class="footer__list-icon">
+                        <use href="/images/index/svg/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                </li>
+            </ul>              
+            
+            <div class="footer__requisites">
+                <p>ФОП Єрмак Наталія Анатоліївна</p>
+                <p>ІПН 2871105627</p>
+                <p>ЄДРПОУ 21980170000008471</p>
+                <p>пр-т Волі, 4, м. Луцьк, 43000</p>
+                <p>kulki.lutsk@gmail.com</p>
+                <p>+38 (095) 714 33 50</p>
+            </div>
+        </section>
 
 
 
 
         <!-- NEW -->
-        <section class="container" style="outline: 1px solid black; height: 200px;">
+        <!-- <section class="container" style="outline: 1px solid black; height: 200px;">
             <div class="section-narrow">
                 <div class="caption">
                     <h2 class="caption_text">ffjhjf</h2>                    
                 </div>
 
             </div>
-        </section>
+        </section> -->
 
     </main>
     
