--- a/index.html
+++ b/index.html
@@ -721,32 +721,32 @@
 
         <!-- FOOTER -->
         <section class="footer-section container">
-            <div class="footer">
-                <button class="footer__button footer__button--1">
-                    <p class="footer__button--text">095 714 33 50</p>   
-                    <p class="footer__button--text footer__button--text2">Замовлення кульок, консультації</p>                 
-                </button>
+            <ul class="footer__button-list link">
+                <li class="footer__button-item footer__button-item--1">
+                    <p class="footer__button-text">095 714 33 50</p>   
+                    <p class="footer__button-text footer__button-text--2">Замовлення кульок, консультації</p>                 
+                </li>
 
-                <button class="footer__button footer__button--2">  
-                    <p class="footer__button--text">066 389 34 33</p>           
-                    <p class="footer__button--text footer__button--text2">Viber, Telegram</p>       
-                </button>
+                <li class="footer__button-item footer__button-item--2">  
+                    <p class="footer__button-text">066 389 34 33</p>           
+                    <p class="footer__button-text footer__button-text--2">Viber, Telegram</p>       
+                </li>
 
-                <button class="footer__button footer__button--3">   
-                    <p class="footer__button--text">kulki.lutsk@gmail.com</p>   
-                    <p class="footer__button--text footer__button--text2">E-mail</p>              
-                </button>
-            </div>
+                <li class="footer__button-item footer__button-item--3">   
+                    <p class="footer__button-text">kulki.lutsk@gmail.com</p>   
+                    <p class="footer__button-text footer__button-text--2">E-mail</p>              
+                </li>
+            </ul>
 
-            <ul class="footer__list link">
-                <li class="footer__list-item">
-                    <svg class="footer__list-icon">
+            <ul class="footer__icon-list link">
+                <li class="footer__icon-item">
+                    <svg class="footer__icon">
                         <use href="/images/index/svg/symbol-defs.svg#icon-instagram"></use>                        
                     </svg>                    
                 </li>
 
-                <li class="footer__list-item">
-                    <svg class="footer__list-icon">
+                <li class="footer__icon-item">
+                    <svg class="footer__icon">
                         <use href="/images/index/svg/symbol-defs.svg#icon-facebook"></use>
                     </svg>
                 </li>
