--- a/index.html
+++ b/index.html
@@ -182,6 +182,22 @@
                         </figure>
                     </li>
 
+                    <!-- <picture class="photo-gallery__balloons">
+                    <source srcset="/images/index/webp/gallery_balloons_mac.webp 1x, /images/index/webp/gallery_balloons_mac@2x.webp 2x" media="(min-width: 1728px)" type="image/webp">   
+                    <source srcset="/images/index/png/gallery_balloons_mac.png 1x, /images/index/png/gallery_balloons_mac@2x.png 2x" media="(min-width: 1728px)">
+                    
+                    <source srcset="/images/index/webp/gallery_balloons_desk.webp 1x, /images/index/webp/gallery_balloons_desk@2x.webp 2x" media="(min-width: 1440px)" type="image/webp">   
+                    <source srcset="/images/index/png/gallery_balloons_desk.png 1x, /images/index/png/gallery_balloons_desk@2x.png 2x" media="(min-width: 1440px)">
+
+                    <source srcset="/images/index/webp/gallery_balloons_tab.webp 1x, /images/index/webp/gallery_balloons_tab@2x.webp 2x" media="(min-width: 834px)" type="image/webp">   
+                    <source srcset="/images/index/png/gallery_balloons_tab.png 1x, /images/index/png/gallery_balloons_tab@2x.png 2x" media="(min-width: 834px)">
+                    
+                    <source srcset="/images/index/webp/gallery_balloons_mob.webp 1x, /images/index/webp/gallery_balloons_mob@2x.webp 2x" media="(min-width: 390px)" type="image/webp">   
+                    <source srcset="/images/index/png/gallery_balloons_mob.png 1x, /images/index/png/gallery_balloons_mob@2x.png 2x" media="(min-width: 390px)">
+
+                    <img src="/images/index/png/gallery_balloons_mob.png" alt="Гелієві кульки" loading="lazy">
+                   </picture>
+ -->
                     <li class="card products__section--type2">
                         <figure class="card__figure">
                             <img class="card__image" src="/images/index/jpg/card2.jpg" alt="Дівчина з кульками на дівич-вечір" loading="lazy">
